--- a/website/akinator/templates/essentials/incl_footer.html
+++ b/website/akinator/templates/essentials/incl_footer.html
@@ -5,5 +5,8 @@
 			<a href="{{url_for('bl_home.terms_of_service')}}" class="small">Terms of Service</a> |
 			<a href="javascript:open_cookie_alert();" rel="nofollow" class="small text-bold">Cookie Settings</a>
 		</p>
+		<p class="text-center mb-0">
+			Copyright &copy; <script>document.write(new Date().getFullYear())</script> Motwg All Rights Reserved
+		</p>
 	</div>
 </footer>
